<resources>
    <string name="app_name">OechApp</string>

    <!--  Title  -->
    <string name="title_sign_up">Sign Up</string>

    <!--  Action  -->
    <string name="action_skip">Skip</string>
    <string name="action_next">Next</string>
    <string name="action_sign_in">Sign in</string>

    <!--  Label  -->
    <string name="label_already_registered">Already have an account?</string>

    <!--  ONBOARD  -->
    <string name="title_onboard_1">Quick Delivery At Your Doorstep</string>
    <string name="title_onboard_2">Flexible Payment</string>
    <string name="title_onboard_3">Real-time Tracking</string>
    <string name="desc_onboard_1">Enjoy quick pick-up and delivery to your destination</string>
    <string name="desc_onboard_2">Different modes of payment either before and after delivery without stress</string>
    <string name="desc_onboard_3">Track your packages/items from the comfort of your home till final destination</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hint_search_services">Search services</string>
    <string name="label_special_for_you">Special for you</string>
    <string name="label_main_actions">What would you like to do</string>
    <string name="title_signup">Create an account</string>
    <string name="desc_signup">Complete the sign up process to get started</string>
    <string name="label_full_name">Full Name</string>
    <string name="hint_full_name">Abecd fsgh</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="hint_phone_number">000000000000</string>
    <string name="label_email">Email Address</string>
    <string name="hint_email">***********@mail.com</string>
    <string name="label_password">Password</string>
    <string name="hint_password">**********</string>

    <!-- TODO: fix -->
    <string name="action_agree_privacy_policy">
        By ticking this box, you agree to our <font color="#EC8000">Terms and conditions and private policy</font>
    </string>

    <string name="label_alternate_registration">or sign in using</string>
    <string name="title_signin">Welcome Back</string>
    <string name="desc_signin">Fill in your email and password to continue</string>
    <string name="action_remember_password">Remember password</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="desc_forgot_password">Enter your email address</string>
    <string name="action_send_otp">Send OTP</string>
    <string name="label_remember_password">Remember password? Back to</string>
    <string name="title_verification">OTP Verification</string>
    <string name="desc_verification">Enter the 6 digit numbers sent to your email</string>
    <string name="label_resend_code">If you didn’t receive code, </string>
    <string name="action_resend_code">Resend</string>
    <string name="title_change_password">New Password</string>
    <string name="desc_change_password">Enter new password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_new_password">New Password</string>
    <string name="error_field_required">Field required</string>
    <string name="error_email_invalid">Email invalid</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="title_greeting">Heelo, %s</string>
    <string name="desc_greetings">We trust you are having a great time</string>
    <string name="action_enable_dark_mode">Enable dark Mode</string>
    <string name="action_logout">Logout</string>
    <string name="action_open_edit_profile">Edit Profile</string>
    <string name="desc_open_edit_profile">Name, phone no, address, email …</string>
    <string name="action_open_reports"><![CDATA[Statements & Reports]]></string>
    <string name="desc_open_reports">Download transaction details, orders, deliveries</string>
    <string name="action_open_notifications">Notification Settings</string>
    <string name="desc_open_notifications"><![CDATA[mute, unmute, set location & tracking setting]]></string>
    <string name="action_open_credit_and_bank"><![CDATA[Card & Bank account settings]]></string>
    <string name="desc_open_credit_and_bank">change cards, delete card details</string>
    <string name="action_open_referals">Referrals</string>
    <string name="desc_open_referals">check no of friends and earn</string>
    <string name="action_open_about">About Us</string>
    <string name="desc_open_about">know more about us, terms and conditions</string>
    <string name="label_no_notifications">You have no notifications</string>
    <string name="title_notification">Notification</string>
    <string name="title_profile">Profile</string>
    <string name="hint_address">Address</string>
    <string name="hint_country">State,Country</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_others">Others</string>
    <string name="label_origin_details">Origin Details</string>
    <string name="label_destination_details">Destination Details</string>
    <string name="action_add_destination">Add destination</string>
    <string name="label_package_details">Package Details</string>
    <string name="hint_package_items">package items</string>
    <string name="hint_items_weight">Weight of item(kg)</string>
    <string name="hint_items_worth">Worth of Items</string>
    <string name="label_select_delivery_type">Select delivery type</string>
    <string name="action_instant_delivery">Instant delivery</string>
    <string name="action_scheduled_delivery">Scheduled delivery</string>
    <string name="error_invalid_number">Invalid number format</string>
    <string name="title_send_package">Send a package</string>
</resources>