<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_padding_horizontal"
    android:paddingVertical="@dimen/activity_padding_vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_forgot_password"
        android:textAppearance="@style/Theme.OechApp.Title"
        android:textColor="?attr/colorOnBackground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_spacing"
        android:text="@string/desc_forgot_password"
        android:textAppearance="@style/Theme.OechApp.Label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/label_email"
        android:textAppearance="@style/Theme.OechApp.Label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xs_spacing"
        app:placeholderText="@string/hint_email"
        app:boxStrokeColor="?attr/colorOutline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/action_send_otp"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_spacing"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_remember_password"
            android:textAppearance="@style/Theme.OechApp.OnBoard.Label" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xs_spacing"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/action_sign_in"
            android:textAppearance="@style/Theme.OechApp.OnBoard.Label"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>
</LinearLayout>