<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_up"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_spacing"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_already_registered"
            android:textAppearance="@style/Theme.OechApp.OnBoard.Label" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xs_spacing"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/action_sign_in"
            android:textAppearance="@style/Theme.OechApp.OnBoard.Label"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>
</merge>